REGRESSION (296844@main): drop-shadow and translation transforms render incorrectly clipped https://bugs.webkit.org/show_bug.cgi?id=313665 rdar://175905543

Reviewed by Brent Fulgham.

In setupFilters, calculateLayerBounds was called with { PreserveAncestorFlags }. This flag causes
descendant layers to inherit the parent's empty flags, which crucially omits IncludeSelfTransform.
Without that flag, CSS transforms on descendant layers (like the inner circle's transform) are
ignored when computing the filter source image bounds. This makes the filter source image buffer
positioned incorrectly, clipping parts of the painted content.

Fix by passing empty flags.

Tests: imported/w3c/web-platform-tests/css/filter-effects/filter-overflow-transformed-child-001.html
       imported/w3c/web-platform-tests/css/filter-effects/reference/filter-overflow-transformed-child-001-ref.html

* LayoutTests/imported/w3c/web-platform-tests/css/filter-effects/filter-overflow-transformed-child-001-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/filter-effects/filter-overflow-transformed-child-001.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/filter-effects/reference/filter-overflow-transformed-child-001-ref.html: Added.
* Source/WebCore/rendering/RenderLayer.cpp:
(WebCore::RenderLayer::setupFilters):

Canonical link: https://commits.webkit.org/313316@main